# eureka

./: .gitignore  README.md  README.zh-TW.md  README_add-udev-explain.md
contract/archimeters/: Move.toml
contract/archimeters/sources/: archimeters.move  atelier.move  kiosk.move  sculpt.move
contract/archimeters/tests/: archimeters_tests.move
contract/eureka/: Move.toml  Published.toml  test_report.md
contract/eureka/sources/: eureka.move  print_job.move
contract/eureka/tests/: eureka_tests.move
landing-page/: index.html  styles.css
tui-app/: CHANGELOG_SEAL.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  SEAL_DECRYPTION.md  SEAL_QUICKSTART.md
tui-app/Gcode-Transmit/: DIAGNOSTICS.md  Ender-3_set.ini  Gcode-Process.sh  Gcode-Send.sh  Gcode-Stop.sh  W-copy.sh  common-device.sh  diagnose-print.py  run-diagnostics.sh  serial  test.stl  test_cube_20mm.stl
tui-app/Gcode-Transmit/main/: Ender-3_set.ini  Gcode-Send.sh  Gcode-Stop.sh  serial  test.gcode
tui-app/examples/: grpc_inspect_dynamic_fields.rs  grpc_inspect_printer_cap.rs  seal_decryption_test.rs  test_encrypt_decrypt.rs  test_encrypt_decrypt_copy.rs  test_new_contract.rs  test_old_format.rs  test_seal_approve.rs  test_seal_approve_direct.rs  test_seal_approve_kiosk.rs  test_seal_decrypt_with_printjob.rs  test_transfer_printjob.rs
tui-app/src/: app.rs  constants.rs  main.rs  transactions.rs  ui.rs  utils.rs  wallet.rs
tui-app/src/app/: core.rs  mod.rs  models.rs  network.rs  print_job.rs  printer.rs  ui_state.rs
tui-app/src/app/printer/: blockchain.rs  mock.rs  mod.rs  monitoring.rs  operations.rs  ui.rs
tui-app/src/blockchain/: mod.rs
tui-app/src/blockchain/transactions/: mod.rs
tui-app/src/blockchain/wallet/: client.rs  mod.rs  printer.rs  sculpt.rs  types.rs  utils.rs
tui-app/src/model/: downloader.rs  mod.rs
tui-app/src/seal/: decryption.rs  mod.rs  printjob_decryption.rs  types.rs
tui-app/src/ui/: animations.rs  ascii_arts.rs  draw.rs  main_view.rs  mod.rs  registration.rs  status_display.rs  utils.rs
tui-app/src/wallet/: client.rs  field_mask.rs  keystore.rs  kiosk.rs  mod.rs  move_json.rs  print_job.rs  printer.rs  sculpt.rs  types.rs  utils.rs
