[package]
name = "tui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"
