[package]
name = "tui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "main" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "main" }
bcs = "0.1.6"
anyhow = "1.0"
dirs = "6.0.0"
futures = "0.3"
tokio = { version = "1.2", features = ["full", "macros"] }
textwrap = "0.16"
serde_json = "1.0"

# Seal SDK for decryption
seal-sdk-rs = { git = "https://github.com/gfusee/seal-sdk-rs", tag = "0.0.2", features = ["native-sui-sdk"] }
reqwest = { version = "0.11", features = ["json"] }
